fixed alignment line for cPop
Former-commit-id: 83f42f34116b786675c3ada4a3d5be8cc5ab8a92

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -534,7 +534,10 @@ table {
     position: absolute;
     margin-top: -60px;
     width: 1px;
+    display: none;
+    
   }
+  
   .barContainer {
     margin-left: 30px;
   }
